frontend/src/Components/UsersTours/UsersTours.css
.nth:nth-child(even) {
    background-color: #EBE5DB;
}

.clients {
    display: flex;
    flex-direction: column;
}

.clients {
    background-color: #FFF9EFFF;
}

.client {
    display: flex;
    align-items: center;
    padding: 2vh 0;
}

.client-info {
    width: 72.3vw;
    margin-right: 1vw;
}

.client-check {
    width: 14vw;
    margin: 2vh 1vw;
}

.client-details {
    margin-block: 10px;
    margin-inline: 50px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
}

.client-articles {
    display: flex;
    flex-direction: column;
    gap: 10px;
    width: 100%;
}

.client-confirmation {
    display: flex;
    justify-content: space-between;
    width: 100%;
}

.delivered {
    display:block;
    margin:auto;
}

.article {
    display: flex;
    justify-content: space-between;
}

.article input {
    width: 40px;
    height: 30px;
}

.article button {
    width: 40px;
    height: 30px;
}

.google-maps-logo {
    max-height: 30px;
}

.extra {
    color: crimson;
    text-align: center;
}

.client-check input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 0;
    width: 0;
}

.checkmark {
    display: block;
    margin: auto;
    height: 21px;
    width: 25px;
    background-color: rgb(217,116,103);
    border-radius: 5px;
    padding-top: 4px;
}

.client-check input:checked ~ .checkmark {
    background-color: #25313c;
}

.checkmark:after {
    content: "";
    margin: auto;
    display: none;
}

.client-check input:checked ~ .checkmark:after {
    display: block;
}

.client-check .checkmark:after {
    width: 5px;
    height: 10px;
    border: solid white;
    border-width: 0 3px 3px 0;
    transform: rotate(45deg);
}

